# my_himloco

./: README.md
HIMLoco/deploy/policy/: base.yaml
HIMLoco/deploy/policy/himloco/: config.yaml  policy.pt
HIMLoco/deploy/src/: CMakeLists.txt
HIMLoco/deploy/src/fsm_robot/: fsm_my_robot.hpp
HIMLoco/deploy/src/include/: imu_driver.hpp  motor_adapter_interface.hpp  rl_real_my_robot.hpp  unitree_motor_adapter.hpp
HIMLoco/deploy/src/src/: imu_driver.cpp  main.cpp  rl_real_my_robot.cpp  unitree_motor_adapter.cpp
HIMLoco/deploy/src/test/: joystick_test.cpp
HIMLoco/exported/policies/: policy.pt
HIMLoco/legged_gym/legged_gym/envs/: __init__.py
HIMLoco/legged_gym/legged_gym/envs/a1/: a1_config.py
HIMLoco/legged_gym/legged_gym/envs/base/: base_task.py  legged_robot.py  legged_robot_config.py
HIMLoco/legged_gym/legged_gym/envs/my_robot/: my_robot_config.py
HIMLoco/legged_gym/legged_gym/scripts/: play.py  train.py
HIMLoco/legged_gym/legged_gym/tests/: test_env.py
HIMLoco/legged_gym/legged_gym/utils/: helpers.py  task_registry.py
HIMLoco/legged_gym/logs/rough_my_robot/May27_04-05-42_/: events.out.tfevents.1779825945.kk.448333.0
HIMLoco/legged_gym/logs/rough_my_robot/May27_06-11-24_/: events.out.tfevents.1779833487.kk.477006.0
HIMLoco/legged_gym/logs/rough_my_robot/May27_07-12-33_/: events.out.tfevents.1779837156.kk.491545.0
HIMLoco/legged_gym/logs/rough_my_robot/May27_07-23-16_/: events.out.tfevents.1779837799.kk.554715.0
HIMLoco/legged_gym/logs/rough_my_robot/May27_18-37-32_/: events.out.tfevents.1779878254.kk.7231.0
HIMLoco/legged_gym/logs/rough_my_robot/May29_08-34-13_/: events.out.tfevents.1780014856.kk.158961.0
HIMLoco/legged_gym/logs/rough_my_robot/May29_20-56-41_/: events.out.tfevents.1780059404.kk.10007.0
HIMLoco/legged_gym/logs/rough_my_robot/exported/policies/: policy.pt
HIMLoco/legged_gym/resources/robots/my_robot/meshes/: FR_calf_link.STL  FR_foot_link.STL  FR_hip_link.STL  base_link.STL
HIMLoco/legged_gym/resources/robots/my_robot/urdf/: my_robot.urdf
HIMLoco/legged_gym/resources/robots/my_robot/xml/: my_robot.xml  scene.xml  scene_terrain.xml
HIMLoco/sim2sim/: config.yaml  sim2sim.py
